5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1716_2498.log
== TEST (2019-05-09 16:38:16) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

crescimentoA = 0

while (A > B):
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:00:19) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA + (crescimentoA // 100))
	cidadeB = cidadeB + (cidadeB + (crescimentoB // 100))
	anos = anos + 1
	
	print (anos)
	

	
-- EXECUTION TIME:
0.129838
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:00:23) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA + (crescimentoA // 100))
	cidadeB = cidadeB + (cidadeB + (crescimentoB // 100))
	anos = anos + 1
	
	print (anos)
	

	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:00:58) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA + (crescimentoA // 100))
	cidadeB = cidadeB + (cidadeB + (crescimentoB // 100))
	anos = anos + 1
	
print (anos)
	

	
-- EXECUTION TIME:
0.181923
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1007
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1007
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1005
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:21) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA // 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB // 100))
	anos = anos + 1
	
print (anos)
	

	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:01:43) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA // 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB // 100))
	anos = anos + 1
	
	print (anos)
	

	
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:02) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
	print (anos)
	

	
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:08) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
	print (anos)
	

	
-- EXECUTION TIME:
0.171666
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
1
2
3
4
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
1
2
3
4
5
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:06:10) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
	print (anos)
	

	
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 17:06:59) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
	

	
-- EXECUTION TIME:
0.165305
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 23:01:37) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
	

	
-- EXECUTION TIME:
0.0287852
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 23:10:11) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
	

	
-- EXECUTION TIME:
0.028656
-- ERROR:
Error response from daemon: Container 58128a93d3c08a55f59fbbecca9f748de708b8ec9c1542e50b7b407f4b004987 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 23:10:18) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
	

	
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 12:40:45) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
	

	
-- EXECUTION TIME:
0.125892
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:04:24) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
-- EXECUTION TIME:
0.032578
-- ERROR:
Error response from daemon: Container 30d3ded12c91c77c0819c6b9f800cbab30d7cbac1c0b89fe247ab5a0b49715de is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 13:05:59) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
-- EXECUTION TIME:
0.15629
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 21:25:18) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
-- EXECUTION TIME:
0.030313
-- ERROR:
Error response from daemon: Container 7750cf393d0a684d3f8b44b5b6e202cd99ea3a8d68a2a7b5a0612e96b04382e6 is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 21:25:24) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:12:27) 
-- CODE:
cidadeA = int(input("Habitantes da cidade A: "))
cidadeB = int(input("Habitantes da cidade B: "))
crescimentoA = float(input("Percentual de crescimento populacional A: "))
crescimentoB = float(input("Percentual de crescimento populacional B: "))

anos = 0

while (cidadeA < cidadeB):
	cidadeA = cidadeA + (cidadeA * (crescimentoA / 100))
	cidadeB = cidadeB + (cidadeB * (crescimentoB / 100))
	anos = anos + 1
	
print (anos)
-- EXECUTION TIME:
0.184322
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
